Inserindo uma imagem de fundo e tematizando a página

--- a/HTML-CSS/01-Introducao.html
+++ b/HTML-CSS/01-Introducao.html
@@ -13,8 +13,8 @@
     As tags e atributos definem a estrutura de uma página html
     Sintaxe de um elemento: <tag atributos="">Conteúdo</tag>
     -->
-    <h1>A seguir teremos um parágrafo com padrão Lorem!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, sed veritatis quia minima optio, voluptates asperiores quas, dolor id sapiente distinctio repudiandae laboriosam officiis ducimus. Error reprehenderit a itaque assumenda.</p>
+    <h1>Come to the dev side!</h1><br><br><br>
+    <p>O terceiro capítulo da nova trilogia de George Lucas começa quase no final das Guerras Clônicas. Depois de três anos de violento conflito, o Conselho Jedi envia Obi-Wan Kenobi (Ewan McGregor) para capturar o General Grievous, o mortífero líder dos exércitos separatistas e levá-lo à justiça. Enquanto isso, em Coruscant, o Chanceler Palpatine (Ian McDiarmid) ganhou ainda mais poder. Suas mudanças políticas transformaram a enfraquecida República no poderoso Império Galáctico e ele revela ao seu aliado mais próximo, Anakin, a natureza de seu poder e os segredos da Força, numa tentativa de atrair o jovem ao lado negro.</p>
    
 </body>
 </html>
