Tipos de Botões

--- a/HTML-CSS/08-Formularios.html
+++ b/HTML-CSS/08-Formularios.html
@@ -13,6 +13,7 @@
     type: define qual é o tipo de texto esperado
     id: permite que o input identifique qual é o label de referência
     name: é o nome do campo
+    required: Define que o preenchimento do campo é obrigatório
     -->
 
     <form>
