Adicionado elementos em blocos header, main e footer

--- a/HTML-CSS/10-Elementos-Linha_Bloco.html
+++ b/HTML-CSS/10-Elementos-Linha_Bloco.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elementos de bloco e de linha</title>
+    <link rel="stylesheet" href="10-Estilos-div.css">
 </head>
 <body>
     <!--
         Tags de bloco
     As tags de bloco visam ocupar 100% de largura com quebra de linha
     Div: São responsáveis por gerar blocos/divisões de códigos
-
+    Span: As tags em linha ocupam apenas a largura de seu conteudo e não geram quebra de linha
     -->
-    <div>Parágrafo para exemplificar o uso de divs</div>
-    <div>Parágrafo para comparação utilizando div</div>
+
+    <!--USO DE DIVS-->
+    <div>
+        <p id="paragrafo1">Exemplo de div - 1 </p>
+        <p id="paragrafo2">Exemplo de div - 2</p>
+        <p id="paragrafo3">Exemplo de div - 3</p>
+        <p id="paragrafo4">Exemplo de div - 4</p>
+        <p id="paragrafo5">Exemplo de div - 5</p>
+        <p id="paragrafo6">Exemplo de div - 6</p>
+    </div>
 
     
+   <!--USO DE SPAN-->
+   <span>Exemplo de texto longo demais para exemplificar</span>
+   <span>Exemplo de texto menor</span>
+
+   <!--TAGS SEMANTICAS-->
+
 </body>
 </html>
