--- a/HTML-CSS/09-PseudoSeletores.html
+++ b/HTML-CSS/09-PseudoSeletores.html
@@ -12,5 +12,7 @@
     <p>Ao passar o cursor do mouse, esse texto ficará com a fonte maior e de outra cor!</p>
     <label for="nome">Mudando a cor do input</label> <input type="text" name="nome" id="nome" placeholder="Digite algo">
 
+    <div class="teste"></div>
+
 </body>
 </html>
