--- a/HTML-CSS/01-Introducao.html
+++ b/HTML-CSS/01-Introducao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira página</title>
-    <link rel="stylesheet" href="06-Introducao.css">
+    <link rel="stylesheet" href="style/06-Introducao.css">
 </head>
 <body>
     <!--Este é um comentário em HTML-->
