--- a/HTML-CSS/09-PseudoSeletores.html
+++ b/HTML-CSS/09-PseudoSeletores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pseudo-Seletores</title>
-    <link rel="stylesheet" href="09-PseudoSeletores.css">
+    <link rel="stylesheet" href="style/09-PseudoSeletores.css">
 </head>
 <body>
 
