--- a/HTML-CSS/10-Elementos-Linha_Bloco.html
+++ b/HTML-CSS/10-Elementos-Linha_Bloco.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elementos de bloco e de linha</title>
-    <link rel="stylesheet" href="10-Estilos-div.css">
+    <link rel="stylesheet" href="style/10-Estilos-div.css">
 </head>
 <body>
     <!--
