--- a/HTML-CSS/10-Header-Main-Footer.html
+++ b/HTML-CSS/10-Header-Main-Footer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhando com divisões</title>
-    <link rel="stylesheet" href="10-Header-Main-Footer.css">
+    <link rel="stylesheet" href="style/10-Header-Main-Footer.css">
 </head>
 
 <body>
