--- a/HTML-CSS/11-Modelo-de-Caixa.html
+++ b/HTML-CSS/11-Modelo-de-Caixa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de caixa</title>
-    <link rel="stylesheet" href="11-Modelo-de-Caixa.css">
+    <link rel="stylesheet" href="style/11-Modelo-de-Caixa.css">
 </head>
 <body>
     <!--Os modelos de caixa são comportamentos que permitem que os elementos de uma
