--- a/HTML-CSS/12-Float.html
+++ b/HTML-CSS/12-Float.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluação</title>
-    <link rel="stylesheet" href="12-Float.css">
+    <link rel="stylesheet" href="style/12-Float.css">
 </head>
 
 <body>
