--- a/HTML-CSS/13-ExercicioPratico.html
+++ b/HTML-CSS/13-ExercicioPratico.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício prático</title>
-    <link rel="stylesheet" href="13-ExercicioPratico.css">
+    <link rel="stylesheet" href="style/13-ExercicioPratico.css">
 </head>
 
 <body>
